Add game container and form layout with skeleton loaders for loading state

--- a/index.html
+++ b/index.html
@@ -6,3 +6,18 @@
         <meta name="viewport" content="width=device-width, initial-scale=1.0" />
 		<link rel="stylesheet" href="styles.css" />
 	</head>
+    <body>
+		<div id="game-container">
+			<form id="trivia-form">
+				<div id="loading-container" class="hidden">
+					<div class="skeleton skeleton-option"></div>
+					<div class="skeleton skeleton-option"></div>
+					<div class="skeleton skeleton-option"></div>
+					<div class="skeleton skeleton-option"></div>
+					<div class="skeleton skeleton-option"></div>
+					<div class="skeleton skeleton-option"></div>
+					<div class="skeleton skeleton-option"></div>
+					<div class="skeleton skeleton-option"></div>
+					<div class="skeleton skeleton-option"></div>
+					<div class="skeleton skeleton-option"></div>
+				</div>
