--- a/index.html
+++ b/index.html
@@ -21,3 +21,26 @@
 					<div class="skeleton skeleton-option"></div>
 					<div class="skeleton skeleton-option"></div>
 				</div>
+                <div id="question-container" class="hidden"></div>
+				<input
+					type="text"
+					id="username"
+					placeholder="Enter your name"
+				/>
+				<button type="submit" id="submit-game">Finish Game</button>
+			</form>
+			<button id="new-player" class="hidden">New Player</button>
+			<table id="score-table">
+				<thead>
+					<tr>
+						<th>Player</th>
+						<th>Score</th>
+					</tr>
+				</thead>
+				<tbody>
+				</tbody>
+			</table>
+		</div>
+		<script src="script.js"></script>
+	</body>
+</html>
