--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-!DOCTYPE html>
+<!DOCTYPE html>
 <html lang="en">
 	<head>
 		<meta charset="UTF-8" />
@@ -6,7 +6,7 @@
         <meta name="viewport" content="width=device-width, initial-scale=1.0" />
 		<link rel="stylesheet" href="styles.css" />
 	</head>
-    <body>
+	<body>
 		<div id="game-container">
 			<form id="trivia-form">
 				<div id="loading-container" class="hidden">
@@ -21,7 +21,8 @@
 					<div class="skeleton skeleton-option"></div>
 					<div class="skeleton skeleton-option"></div>
 				</div>
-                <div id="question-container" class="hidden"></div>
+
+				<div id="question-container" class="hidden"></div>
 				<input
 					type="text"
 					id="username"
